--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node Server Testing Challenge",
   "main": "server.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose",
+    "server":"nodemon index.js"
   },
   "jest": {
     "testEnvironment": "node"
